astro/src/styles/components/taxonomy.scss
// TODO make this a generic body section style
.taxonomy {
  display: flex;
  flex-direction: column;
  gap: 0.25rem;
}

.pill-list {
  display: flex;
  align-items: center;
  gap: 0.25rem 0.5rem;
  flex-wrap: wrap;
}

.pill {
  padding: 0.125rem 0.25rem;
  border-radius: 0.25rem;
  font-size: var(--fs-small);

  &.tags {
    background-color: var(--rose-100);
    color: var(--black-500);
  }

  &.categories {
    background-color: var(--ivory-300);
    color: var(--black-100);
  }

  &.series {
    background-color: var(--green-100);
    color: var(--ivory-500);
  }
}

